# mhdexdb

./: Cargo.toml  README.md
data/metadata/: charge_blade_phials.json  sharpness_colors.json  special_types.json  switch_axe_phials.json  weapon_columns.json  weapon_types.json
server_test/: .gitignore  config.js  index.html  package.json
server_test/src/: main.tsx
src/: lib.rs  main.rs  table.rs  utils.rs
src/data/: base.rs  dataset.rs  mod.rs  quest.rs  table.rs  weapon.rs
src/data/quest/: quest.rs
src/data/weapon/: content.rs  metadata.rs  mod.rs
src/server/: mod.rs  response.rs  rpc.rs  server.rs  worker.rs
