[package]
name = "mhdexdb"
version = "0.1.0"
authors = ["Break Yang <breakds@gmail.com>"]

[lib]
name = "dexdb"
path = "src/lib.rs"

[dependencies]
rusqlite = "0.x"
lazy_static = "0.x"

# For parsing Json
rustc-serialize = "0.x"

# For Server and Async I/O
mio = "0.6"
http-muncher = "0.2.5"
slab = "0.3"